<resources>
    <string name="app_name">bookSharing_Application</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Profile</string>
    <string name="nav_header_subtitle">onlineBookSharing.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sharebook">Share Book</string>
    <string name="menu_sharedbook">Shared Books</string>
    <string name="menu_contactUs">Contact Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_aboutapp">About app</string>
</resources>